--- a/assets/css/additional_style.css
+++ b/assets/css/additional_style.css
@@ -112,3 +112,15 @@
   margin-right: auto;
   width: 90%;
 }
+
+.skills-icons {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+}
+
+/* .each-skill {
+  flex-wrap: wrap;
+} */
